bizznest page first push

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <title>Vite + React</title>
   </head>
   <body>
